fix(ai): settings-page audit cluster — skill toggles actually work, toggles persist, export can't crash, default-model rename, MCP ghost entry
Fixes from the full-project audit (settings-ui dimension, 4 MEDIUM + 2 LOW):

- The skill enable/disable switches were dead: the settings page and the chat page
  each hold their OWN SkillRegistry, and the disabled set was a plain in-memory
  HashSet — so toggling in settings changed a private set the prompt builder never
  saw, and reset on restart. SkillRegistry now persists the disabled set to a
  .disabled file in the skills dir and re-syncs whenever that file changes, so both
  instances agree and the state survives restarts.
- titleNaming / autoCrashAnalysis toggles only bindBidirectional'd the property;
  nothing ever saved, so a lone toggle silently reverted on restart (and crash
  analysis kept firing paid AI calls the user had turned off). Both now save on
  change like every toggleRow does.
- exportAllSessions ran on the FX thread and caught only IOException: a corrupt
  ai-sessions.json (JsonParseException/NPE from load) crashed the app AFTER the
  user picked a save path. Export now runs on a background thread, catches
  everything, and reports failure via toast.
- Renaming a model that IS the provider's default now moves defaultModelId along
  with it; previously every request kept sending the old (nonexistent) id — a
  permanent 404 the UI gave no clue about.
- addMcpServer no longer pre-adds the config before the dialog: cancelling used to
  leave a ghost entry that the next save persisted forever (with no UI to delete it).

Compiles, HMCLAI tests green.